<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>a3_racing</name>
  <version>0.1.0</version>
  <description>
    Assignment 3 – Project 3: Racing Track.
    Ackerman (Audi R8) racing platform controlled via ROS2. Uses a 180° laser
    scanner to detect track walls, validate goals, detect obstacles, and
    (in advanced mode) generate lane-centre waypoints automatically.
  </description>

  <maintainer email="student@student.uts.edu.au">Student Name</maintainer>
  <license>LGPLv3</license>
  <author email="student@uts.edu.au">Student Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <test_depend>ament_cmake_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
